# QuMMSE

./: .gitignore  .gitmodules  CMakeLists.txt  GenAlg.py  config_save_lowPrec  data.txt  data1.txt  main.cpp  main.py
include/: Cons.h  MMSE.h  config.h  utils.h
